<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Motorrad Cluster</string>
    <string name="app_shortName">Motorrad Cluster</string>
    <!-- Image descriptions -->
    <string name="image_left_arrow">Left Signal</string>
    <string name="image_high_beams">High Beams</string>
    <string name="image_heated_grips">Heated Grips</string>
    <string name="image_abs">ABS Status</string>
    <string name="image_kill_switch">Kill Switch</string>
    <string name="image_lampf">Lamp Fault</string>
    <string name="image_fuel_warning">Fuel Warning</string>
    <string name="image_tpms">TPMS Status</string>
    <string name="image_bluetooth">Bluetooth Status</string>
    <string name="image_right_arrow">Right Signal</string>
    <string name="image_fuel_gauge">Fuel Gauge</string>
    <string name="image_esa">ESA Status</string>
    <string name="image_preference">Preferences</string>
    <!-- Menu items -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <!-- Preference strings -->
    <string name="ui_title">User Interface</string>
    <string name="pref_infoview_name">Current Info View</string>
    <string-array name="infoview_array">
        <item name="1">RPM</item>
        <item name="2">Bearing</item>
        <item name="3">TPMS</item>
        <item name="4">Temperatures</item>
    </string-array>
    <string-array name="infoview_arrayValues">
        <item name="1">0</item>
        <item name="2">1</item>
        <item name="3">2</item>
        <item name="4">3</item>
    </string-array>
    <string name="pref_tempf_name">Temperature Unit</string>
    <string-array name="tempf_array">
        <item name="1">Celsius</item>
        <item name="2">Fahrenheit</item>
    </string-array>
    <string-array name="tempf_arrayValues">
        <item name="1">0</item>
        <item name="2">1</item>
    </string-array>
    <string name="pref_distance_name">Distance Unit</string>
    <string-array name="distance_array">
        <item name="1">Imperial</item>
        <item name="2">Metric</item>
    </string-array>
    <string-array name="distance_arrayValues">
        <item name="1">0</item>
        <item name="2">1</item>
    </string-array>
    <string name="pref_pressuref_name">Pressure Unit</string>
    <string-array name="pressuref_array">
        <item name="1">psi</item>
        <item name="2">KPa</item>
        <item name="3">Kg-f</item>
        <item name="4">Bar</item>
    </string-array>
    <string-array name="pressuref_arrayValues">
        <item name="1">0</item>
        <item name="2">1</item>
        <item name="3">2</item>
        <item name="4">3</item>
    </string-array>
    <string name="pref_nightMode_name">Night Mode</string>
    <string name="pref_nightMode_summary">Enable Night Mode, Disables Auto Night Mode</string>
    <string name="pref_autoNightMode_name">Auto Night Mode</string>
    <string name="pref_autoNightMode_summary">Enable Auto Night Mode (Requires light sensor)</string>
    <string name="pref_autoNightModeDelay_name">Auto Night Mode Delay In Seconds</string>
    <string name="pref_autoNightModeDelay_summary">Set Auto Night Mode Delay In Seconds</string>
    <string name="notifications_title">Notifications</string>
    <string name="pref_audioAlertDelay_name">Audio Alert Delay</string>
    <string name="pref_audioAlertDelay_summary">Set Audio Alert Delay In Seconds</string>
    <string name="pref_fuelWarning_name">Fuel Warning</string>
    <string name="pref_fuelWarning_summary">Percent at which to warn of low fuel</string>
    <string name="pref_fuelStations_name">Fuel Station Suggestion</string>
    <string-array name="fuel_array">
        <item name="1">Nothing</item>
        <item name="2">Nearby fuel stations</item>
        <item name="3">Route to nearest fuel station</item>
    </string-array>
    <string-array name="fuel_arrayValues">
        <item name="1">0</item>
        <item name="2">1</item>
        <item name="3">2</item>
    </string-array>
    <string name="tpms_settings_title">iTPMS Settings</string>
    <string name="pref_enableTPMS_name">iTPMS</string>
    <string name="pref_enableTPMS_summary">Enable iTPMS Support</string>
    <string name="pref_low_pressure_name">Low Pressure</string>
    <string name="pref_low_pressure_summary">Low Pressure Alert Threshold</string>
    <string name="pref_high_pressure_name">High Pressure</string>
    <string name="pref_high_pressure_summary">High Pressure Alert Threshold</string>
    <string name="advanced_settings_title">Advanced Settings</string>
    <string name="pref_wheelSize_name">Front Wheel Size</string>
    <string name="pref_wheelSize_summary">Impacts Speed Calculation</string>
    <string-array name="wheelSize_array">
        <item name="1">19" (Stock)</item>
        <item name="2">21" (Custom)</item>
    </string-array>
    <string-array name="wheelSize_arrayValues">
        <item name="1">0</item>
        <item name="2">1</item>
    </string-array>
    <string name="pref_dataLogging_name">Data Logging</string>
    <string name="pref_dataLogging_summary">Enable Data Logging To /sdcard/mCluster/</string>
    <!-- Setup message alert dialog -->
    <string name="alert_about_title">About</string>
    <string name="alert_about_button">OK</string>
    <!-- Setup message fuel station recommendations -->
    <string name="alert_fuel_stations_title">Open Google Maps</string>
    <string name="alert_fuel_stations_message_suggestions">Show nearby fuel stations?</string>
    <string name="alert_fuel_stations_message_navigation">Navigate to nearest fuel station?</string>
    <string name="alert_fuel_stations_button_positive">Yes</string>
    <string name="alert_fuel_stations_button_negative">No</string>
    <!-- Toast messages -->
    <string name="toast_noPaired">No previously paired CANBusGateway found</string>
    <string name="toast_noPairedTPMS">No previously paired iTPMS found</string>
    <string name="toast_connectedTo">Connected to:</string>
    <!-- Fuel messages -->
    <string name="fuel_alert_begin">Fuel level is at </string>
    <string name="fuel_alert_end"> percent</string>
    <string name="fuel_alert_reserve">You are now on reserve</string>
    <!-- Engine Temp messages -->
    <string name="engine_temp_desc">Engine</string>
    <string name="engine_temp_alert">Engine temperature is too high</string>
    <!-- Air Temp messages -->
    <string name="air_temp_desc">Air</string>
    <string name="freeze_alert">Icy conditions warning</string>
    <!-- Pressure alert messages -->
    <string name="alert_lowFrontPressure">Low front tire pressure</string>
    <string name="alert_highFrontPressure">High front tire pressure</string>
    <string name="alert_lowRearPressure">Low rear tire pressure</string>
    <string name="alert_highRearPressure">High rear tire pressure</string>
    <string name="alert_lowFrontLowRearPressure">Low front and rear tire pressure</string>
    <string name="alert_highFrontHighRearPressure">High front and rear tire pressure</string>
    <string name="alert_lowFrontHighRearPressure">Low front and High rear tire pressure</string>
    <string name="alert_highFrontLowRearPressure">High front and Low rear tire pressure</string>
</resources>