<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/ui_title" >
        <ListPreference
            android:key="prefInfoView"
            android:title="@string/pref_infoview_name"
            android:entries="@array/infoview_array"
            android:entryValues="@array/infoview_arrayValues"
            android:defaultValue="0"
            />
        <ListPreference
            android:key="prefTempFormat"
            android:title="@string/pref_tempf_name"
            android:entries="@array/tempf_array"
            android:entryValues="@array/tempf_arrayValues"
            android:defaultValue="0"
            />
        <ListPreference
            android:key="prefDistance"
            android:title="@string/pref_distance_name"
            android:entries="@array/distance_array"
            android:entryValues="@array/distance_arrayValues"
            android:defaultValue="0"
            />
        <ListPreference
            android:key="prefpressuref"
            android:title="@string/pref_pressuref_name"
            android:entries="@array/pressuref_array"
            android:entryValues="@array/pressuref_arrayValues"
            android:defaultValue="0"
            />
        <CheckBoxPreference
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:key="prefNightMode"
            android:summary="@string/pref_nightMode_summary"
            android:title="@string/pref_nightMode_name" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="prefNightMode"
            android:key="prefAutoNightMode"
            android:summary="@string/pref_autoNightMode_summary"
            android:title="@string/pref_autoNightMode_name" >
        </CheckBoxPreference>
        <EditTextPreference
            android:dependency="prefNightMode"
            android:title="@string/pref_autoNightModeDelay_name"
            android:summary="@string/pref_autoNightModeDelay_summary"
            android:defaultValue="30"
            android:inputType="number"
            android:key="prefAutoNightModeDelay" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/tpms_settings_title" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:disableDependentsState="false"
            android:key="prefEnableTPMS"
            android:summary="@string/pref_enableTPMS_summary"
            android:title="@string/pref_enableTPMS_name" >
        </CheckBoxPreference>
            <EditTextPreference
                android:title="@string/pref_low_pressure_name"
                android:summary="@string/pref_low_pressure_summary"
                android:defaultValue="30"
                android:inputType="number"
                android:key="prefLowPressure"
                android:dependency="prefEnableTPMS"
                />
            <EditTextPreference
                android:title="@string/pref_high_pressure_name"
                android:summary="@string/pref_high_pressure_summary"
                android:defaultValue="46"
                android:inputType="number"
                android:key="prefHighPressure"
                android:dependency="prefEnableTPMS"
                />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notifications_title" >
        <EditTextPreference
            android:title="@string/pref_audioAlertDelay_name"
            android:summary="@string/pref_audioAlertDelay_summary"
            android:defaultValue="30"
            android:inputType="number"
            android:key="prefAudioAlertDelay" />
        <org.thecongers.mcluster.NumberPickerPreference
            android:defaultValue="30"
            android:summary="@string/pref_fuelWarning_summary"
            android:key="prefFuelWarning"
            android:title="@string/pref_fuelWarning_name" />
        <ListPreference
            android:key="prefFuelStation"
            android:title="@string/pref_fuelStations_name"
            android:entries="@array/fuel_array"
            android:entryValues="@array/fuel_arrayValues"
            android:defaultValue="0" >
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/advanced_settings_title" >
        <ListPreference
            android:key="prefWheelSize"
            android:title="@string/pref_wheelSize_name"
            android:summary="@string/pref_wheelSize_summary"
            android:entries="@array/wheelSize_array"
            android:entryValues="@array/wheelSize_arrayValues"
            android:defaultValue="0"
            />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefDataLogging"
            android:summary="@string/pref_dataLogging_summary"
            android:title="@string/pref_dataLogging_name" >
        </CheckBoxPreference>
    </PreferenceCategory>
</PreferenceScreen>
